Fix js and spacing

--- a/static/assets/sass/base/_webinar.scss
+++ b/static/assets/sass/base/_webinar.scss
@@ -712,7 +712,7 @@
 }
 .is-sticky.webinar-search {
   position: sticky;
-  top: 60px;
+  top: 89px;
   background-color: #fff;
   z-index: 9;
 }
